# test-llama

./: .gitignore  gradle.properties  settings.gradle
llama/: build.gradle  gradle.properties
llama/src/androidTest/java/ai/aisee/llama/: ExampleInstrumentedTest.java
llama/src/main/cpp/: CMakeLists.txt  GGUFReader.cpp  LLMInference.cpp  LLMInference.h  llama.cpp
llama/src/main/java/ai/aisee/llama/HF/: CustomDateDeserializer.java  CustomDateSerializer.java  ExampleModel.java  HFEndpoints.java  HFModelInfo.java  HFModelSearch.java  HFModelTree.java  HFModels.java
llama/src/main/java/ai/aisee/llama/LLaMa/: GGUFReader.java  LLaMa.java  ModelInference.java  ModelLoader.java
llama/src/test/java/ai/aisee/llama/: ExampleUnitTest.java
